fixed flickering caused by rgba in showcase-menu

--- a/src/style.css
+++ b/src/style.css
@@ -332,7 +332,7 @@ code {
   cursor: pointer;
   text-align: right;
   font-size: var(--medium-font);
-  /* z-index: 1; */
+  z-index: 1;
 }
 
 .showcase-content {
@@ -399,6 +399,7 @@ code {
   position: sticky;
   top: 8vh;
   opacity: 0;
+  overflow: hidden;
 }
 
 .showcase-item.showcase-menu-middle{
@@ -413,6 +414,7 @@ code {
   height: 500%;
   width: 13rem;
   transition: all .6s cubic-bezier(0.25, 1, 0.5, 1);
+  z-index: -1;
 }
 
 .showcase-item.showcase-menu-middle::before {
@@ -498,7 +500,7 @@ code {
 
 #showcase-menu:hover .showcase-item.showcase-menu-middle::before,
 #showcase-menu:hover .showcase-item.showcase-menu-middle::after{
-  height: 0%;
+  height: 0px;
   transition-duration: 1.2s;
 }
 
